--- a/backend/.NET_TeamManager.md
+++ b/backend/.NET_TeamManager.md
@@ -24,6 +24,7 @@ You can add any number of additional fields for internal usage. We can add/remov
 
 ### Bonus features
 * There should be pagination in user and team lists.
+* Lists should be sortable by id or creation date.
 * To make it similar to our architecture, we expect you to write a simple web server for CRUD operations. Application communicates with this server and the server handles data storage.
 
 ## Data management
