--- a/backend/.NET_TeamManager.md
+++ b/backend/.NET_TeamManager.md
@@ -4,7 +4,7 @@ In this task, we ask you to implement a desktop application to manage users and 
 
 ## Wizard Part
 
-The application should run as a 2-step wizard. When the application starts, the user is expected to login into the first wizard page and click Next. On the next page, users enter his/her purpose of logging in so that we can check everyone's purpose on each login and track the cause of any unwanted incident. After clicking the Next button, the user can access the management system.
+The application should run as a 2-step wizard. When the application starts, the user is expected to login into the first wizard page and click `Next`. On the next page, users enter his/her purpose of logging in so that we can check everyone's purpose on each login and track the cause of any unwanted incident. After clicking the `Next` button, the user can access the management system.
 
 ## Management Part
 
